--- a/halcon/templates/halcon/index.html
+++ b/halcon/templates/halcon/index.html
@@ -1,6 +1,6 @@
 {% extends "./base.html" %}
 {% block content %}
-	<p align="center">Últimos boxes</p>
+	<h1 align="center">Latest boxes</h1>
 
 	<div class="container-fluid">
 		<div class="row">
