--- a/halcon/templates/halcon/base.html
+++ b/halcon/templates/halcon/base.html
@@ -1,39 +1,49 @@
 {% load static %}
 
-<link rel="stylesheet" type="text/css" href="{% static 'halcon/css/bootstrap.min.css' %}">
+<!-- link rel="stylesheet" type="text/css" href="{% static 'halcon/css/bootstrap.min.css' %}" -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 <meta name="description" content="Visualizacion y descarga de las imágenes y vídeos" />
 <meta name="keywords" content="youtube, instagram, thumbs, thumbnails, images, miniaturas, imagenes, descargar, guardar, videos" />
 <meta name="author" content="metatags generator">
 <meta name="robots" content="index, follow">
 <title>itoolsweb.com</title>
-<head>
 
-</head>
-
-<div class="row">
-	<div ass="col-md-12">
-		<nav class="navbar navbar-expand-lg">
-			<a class="navbar-brand" href="/">itoolboxpro.com</a>
-		</nav>
+<header>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+			<nav class="navbar navbar-expand-lg navbar-light bg-light navbar-dark bg-dark navbar-fixed-top">
+				 
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+					<span class="navbar-toggler-icon"></span>
+				</button> <a class="navbar-brand" href="/">itoolboxpro</a>
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1 ">
+					
+					<form class="form-inline" action="{% url 'halcon:resultados' %}" method="POST">
+						{% csrf_token %}
+						<input class="form-control mr-sm-2" type="text" placeholder="Paste url" aria-label="Box it!" value="{{ url }}" id="url" name="url" onFocus="seltext();" style="width: 400px;"> 
+						<button class="btn btn-primary my-2 my-sm-0" type="submit">
+							Box it!
+						</button>
+					</form>
+					
+				</div>
+			</nav>
+		</div>
 	</div>
 </div>
+</header>
 
+
+<!-- Inicia nabvar-->
+
+<!-- -->
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 <body>
 
-<div class="row">
-	<div class="col-md-12"  align="center">
-		<nav class="navbar navbar-light bg-light">
-			<form class="form-inline" action="{% url 'halcon:resultados' %}" method="POST">
-				{% csrf_token %}
-				<input class="form-control mr-sm-2" type="textfield" placeholder="Search" aria-label="Box it!" value="{{ url }}" id="url" name="url" onFocus="seltext();" style="float: center">
-				<button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="float: center">Search</button>
-			</form>
-		</nav>
-	</div>
-</div>
+
 
 <script type="text/javascript">
 	function seltext(){
@@ -46,9 +56,13 @@
 	</div>
 </div>
 
-<script src="{% static 'halcon/js/jquery.min.js' %}"></script>
-<script src="{% static 'halcon/js/bootstrap.min.js' %}"></script>
-<script src="{% static 'halcon/js/scripts.js' %}"></script>
-
+<!-- script src="{% static 'halcon/js/jquery.min.js' %}"></script -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<!-- script src="{% static 'halcon/js/bootstrap.min.js' %}"></script -->
+<!-- script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script -->
+<!-- script src="{% static 'halcon/js/scripts.js' %}"></script -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
