--- a/halcon/templates/halcon/base.html
+++ b/halcon/templates/halcon/base.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<!-- link rel="stylesheet" type="text/css" href="{% static 'halcon/css/bootstrap.min.css' %}" -->
+<link rel="stylesheet" type="text/css" href="{% static 'halcon/css/style.css' %}">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 <meta name="description" content="Visualizacion y descarga de las imágenes y vídeos" />
@@ -18,7 +18,7 @@
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 					<span class="navbar-toggler-icon"></span>
 				</button> <a class="navbar-brand" href="/">itoolboxpro</a>
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1 ">
+				<!-- div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1 "-->
 					
 					<form class="form-inline" action="{% url 'halcon:resultados' %}" method="POST">
 						{% csrf_token %}
@@ -28,7 +28,7 @@
 						</button>
 					</form>
 					
-				</div>
+				<!-- /div-->
 			</nav>
 		</div>
 	</div>
@@ -64,5 +64,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+<script type="text/javascript" script-name="advent-pro" src="http://use.edgefonts.net/advent-pro.js"></script>
 </body>
 
