--- a/halcon/templates/halcon/base.html
+++ b/halcon/templates/halcon/base.html
@@ -56,6 +56,24 @@
 	</div>
 </div>
 
+<script type="text/javascript">
+  (function showplayer(){
+    var str = document.getElementById('vid01').src
+    /*alert(str);*/
+    var control = document.getElementById('vid01')
+    if (str=="") {
+      /*No hay video*/
+      control.style.display='none';
+    }
+    else{
+     /*Sí hay video*/
+     control.style.display='block';
+    }
+  })();
+</script>
+
+<script type="text/javascript" script-name="advent-pro" src="http://use.edgefonts.net/advent-pro.js"></script>
+
 <!-- script src="{% static 'halcon/js/jquery.min.js' %}"></script -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <!-- script src="{% static 'halcon/js/bootstrap.min.js' %}"></script -->
