--- a/halcon/templates/halcon/cuerpo.html
+++ b/halcon/templates/halcon/cuerpo.html
@@ -5,38 +5,14 @@
 
 {% block content %}
 	<center>
-    <div class="enjoy-css-titulo">{{ titulo }}</div>
-    <div class="enjoy-css-descripcion">{{ descripcion }}</div>
-    
-    {% for enlace in enlaces %}
-    <p>{{ enlace }}</p>
-    {% endfor %}
-
-    
-    <code>{{ subtitulos }}</code>
-    
-
-  	<p><img id="img01" src="{{ imagen }}"></p>
+    <div class="enjoy-css-titulo">
+      <p>{{ titulo }}</p>
+    </div>
+    <div class="enjoy-css-descripcion">
+      <p>{{ descripcion }}</p>
+    </div>
+    <p><img id="img01" src="{{ imagen }}"></p>
     <p><video id="vid01" src="{{ video }}" controls style="display: none;"></video></p>
   </center>
-
-<script type="text/javascript">
-  (function showplayer(){
-    var str = document.getElementById('vid01').src
-    /*alert(str);*/
-    var control = document.getElementById('vid01')
-    if (str=="") {
-      /*No hay video*/
-      control.style.display='none';
-    }
-    else{
-     /*Sí hay video*/
-     control.style.display='block';
-    }
-  })();
-</script>
-
-<script type="text/javascript" script-name="advent-pro" src="http://use.edgefonts.net/advent-pro.js"></script>
-
 {% endblock %}
 	
