--- a/halcon/templates/halcon/base.html
+++ b/halcon/templates/halcon/base.html
@@ -9,7 +9,19 @@
 <meta name="robots" content="index, follow">
 <title>itoolsweb.com</title>
 
-<header>
+<head>
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135032478-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-135032478-1');
+	</script>
+
+
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
@@ -33,7 +45,7 @@
 		</div>
 	</div>
 </div>
-</header>
+</head>
 
 
 <!-- Inicia nabvar-->
