<title>itoolboxpro.com</title>

--- a/halcon/templates/halcon/base.html
+++ b/halcon/templates/halcon/base.html
@@ -7,7 +7,7 @@
 <meta name="keywords" content="youtube, instagram, thumbs, thumbnails, images, miniaturas, imagenes, descargar, guardar, videos" />
 <meta name="author" content="metatags generator">
 <meta name="robots" content="index, follow">
-<title>itoolsweb.com</title>
+<title>itoolboxpro.com</title>
 
 <head>
 
