--- a/halcon/templates/halcon/base.html
+++ b/halcon/templates/halcon/base.html
@@ -29,7 +29,8 @@
 				 
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 					<span class="navbar-toggler-icon"></span>
-				</button> <a class="navbar-brand" href="/">itoolboxpro</a>
+				</button> <a class="navbar-brand" href="/">
+							<img src="{% static 'halcon/img/itoolboxpro.png' %}" width="400px" height="60px" alt=""></a>
 				<!-- div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1 "-->
 					
 					<form class="form-inline" action="{% url 'halcon:resultados' %}" method="POST">
