--- a/halcon/templates/halcon/base.html
+++ b/halcon/templates/halcon/base.html
@@ -30,7 +30,7 @@
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 					<span class="navbar-toggler-icon"></span>
 				</button> <a class="navbar-brand" href="/">
-							<img src="{% static 'halcon/img/itoolboxpro.png' %}" width="100px" height="60px" alt=""></a>
+							<img src="{% static 'halcon/img/itoolboxpro.png' %}" width="100px" height="60px" alt="">itoolboxpro.com</a>
 				<!-- div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1 "-->
 					
 					<form class="form-inline" action="{% url 'halcon:resultados' %}" method="POST">
