--- a/halcon/templates/halcon/base.html
+++ b/halcon/templates/halcon/base.html
@@ -25,17 +25,16 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
-			<nav class="navbar navbar-expand-lg navbar-light bg-light navbar-dark bg-dark navbar-fixed-top">
+			<!--nav class="navbar navbar-expand-lg navbar-light bg-light navbar-dark bg-dark navbar-fixed-top"-->
+			<nav class="navbar fixed-top navbar-light bg-light navbar-dark bg-dark">
 				 
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-					<span class="navbar-toggler-icon"></span>
-				</button> <a class="navbar-brand" href="/">
+				<a class="navbar-brand" href="/">
 							<img src="{% static 'halcon/img/itoolboxpro.png' %}" width="100px" height="60px" alt="">itoolboxpro.com</a>
 				<!-- div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1 "-->
 					
 					<form class="form-inline" action="{% url 'halcon:resultados' %}" method="POST">
 						{% csrf_token %}
-						<input class="form-control mr-sm-2" type="text" placeholder="Paste url" aria-label="Box it!" value="{{ url }}" id="url" name="url" onFocus="seltext();" style="width: 400px;"> 
+						<input class="form-control mr-sm-2" type="text" placeholder="Paste url" aria-label="Box it!" value="{{ url }}" id="url" name="url" onFocus="seltext();" style="width: 400px;" align="center"> 
 						<button class="btn btn-primary my-2 my-sm-0" type="submit">
 							Box it!
 						</button>
