--- a/halcon/templates/halcon/base.html
+++ b/halcon/templates/halcon/base.html
@@ -26,7 +26,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<!--nav class="navbar navbar-expand-lg navbar-light bg-light navbar-dark bg-dark navbar-fixed-top"-->
-			<nav class="navbar fixed-top navbar-light bg-light navbar-dark bg-dark">
+			<nav class="navbar navbar-light bg-light navbar-dark bg-dark">
 				 
 				<a class="navbar-brand" href="/">
 							<img src="{% static 'halcon/img/itoolboxpro.png' %}" width="100px" height="60px" alt="">itoolboxpro.com</a>
