--- a/halcon/templates/halcon/youtube.html
+++ b/halcon/templates/halcon/youtube.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 	<center>
-    <div class="enjoy-css-titulo">
+    <div class="enjoy-css-titulo" style="padding-top: 100px;">
       <p>{{ titulo }}</p>
     </div>
     <div class="enjoy-css-descripcion">
