Gooogle AdSense Code

--- a/halcon/templates/halcon/base.html
+++ b/halcon/templates/halcon/base.html
@@ -20,6 +20,17 @@
 
 	  gtag('config', 'UA-135032478-1');
 	</script>
+	<!-- Google Analytics -->
+
+	<!-- Google AdSense -->
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script>
+	     (adsbygoogle = window.adsbygoogle || []).push({
+	          google_ad_client: "ca-pub-2623166591637426",
+	          enable_page_level_ads: true
+	     });
+	</script>
+	<!-- Google AdSense -->
 
 
 <div class="container-fluid">
