--- a/halcon/templates/halcon/base.html
+++ b/halcon/templates/halcon/base.html
@@ -30,38 +30,33 @@
 	          enable_page_level_ads: true
 	     });
 	</script>
+
+	<script async custom-element="amp-auto-ads"
+	        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+	</script>
+
 	<!-- Google AdSense -->
 
 
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
-			<!--nav class="navbar navbar-expand-lg navbar-light bg-light navbar-dark bg-dark navbar-fixed-top"-->
-			<nav class="navbar fixed-top navbar-light bg-light navbar-dark bg-dark">
-				 
+			<nav class="navbar fixed-top navbar-dark bg-dark">				 
 				<a class="navbar-brand" href="/">
-							<img src="{% static 'halcon/img/itoolboxpro.png' %}" width="100px" height="60px" alt="">itoolboxpro.com</a>
-				<!-- div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1 "-->
-					
-					<form class="form-inline" action="{% url 'halcon:resultados' %}" method="POST">
-						{% csrf_token %}
-						<input class="form-control mr-sm-2" type="text" placeholder="Paste url" aria-label="Box it!" value="{{ url }}" id="url" name="url" onFocus="seltext();" style="width: 400px;" align="center"> 
-						<button class="btn btn-primary my-2 my-sm-0" type="submit">
-							Box it!
-						</button>
-					</form>
-					
-				<!-- /div-->
+					<img src="{% static 'halcon/img/itoolboxpro.png' %}" width="100px" height="60px" alt="">itoolboxpro.com</a>					
+				<form class="form-inline" action="{% url 'halcon:resultados' %}" method="POST">
+					{% csrf_token %}
+					<input class="form-control mr-sm-2" type="text" placeholder="Paste url" aria-label="Box it!" value="{{ url }}" id="url" name="url" onFocus="seltext();" style="width: 400px;" align="center"> 
+					<button class="btn btn-primary my-2 my-sm-0" type="submit">
+						Box it!
+					</button>
+				</form>					
 			</nav>
 		</div>
 	</div>
 </div>
 </head>
 
-
-<!-- Inicia nabvar-->
-
-<!-- -->
 {% if error_message %}
 	<div class="alert alert-primary alert-dismissible fade show" role="alert" style="margin-top: 100px;">
 	  <p>{{ error_message }}</p>
@@ -85,6 +80,9 @@
 	</div>
 </div>
 
+<amp-auto-ads type="adsense"
+              data-ad-client="ca-pub-2623166591637426">
+</amp-auto-ads>
 
 <div class="container-fluid">
 	<div class="row">
