Propeller Ads metatag

--- a/halcon/templates/halcon/base.html
+++ b/halcon/templates/halcon/base.html
@@ -7,24 +7,10 @@
 <meta name="keywords" content="youtube, instagram, facebook, pinterest, vimeo, web, thumbs, thumbnails, images, miniaturas, imagenes, descargar, guardar, videos" />
 <meta name="author" content="itoolboxpro">
 <meta name="robots" content="index, follow">
+<meta name="propeller" content="30dc8603f8e6b68001ba35e25627b9fa">
 <title>itoolboxpro.com</title>
 
 <head>
-	<!-- Google AdSense -->
-	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-	<script>
-	     (adsbygoogle = window.adsbygoogle || []).push({
-	          google_ad_client: "ca-pub-2623166591637426",
-	          enable_page_level_ads: true
-	     });
-	</script>
-
-	<script async custom-element="amp-auto-ads"
-	        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
-	</script>
-
-	<!-- Google AdSense -->
-	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135032478-1"></script>
 	<script>
