--- a/halcon/templates/halcon/base.html
+++ b/halcon/templates/halcon/base.html
@@ -60,6 +60,7 @@
 </script>
 <div class="row" id="content">
 	<div class="col-md-12">
+		<a href="http://deloplen.com/afu.php?zoneid=2558003">Directlink01</a>
 		{% block content %}{% endblock %}
 	</div>
 </div>
@@ -109,7 +110,7 @@
 <script type="text/javascript" script-name="advent-pro" src="http://use.edgefonts.net/advent-pro.js"></script>
 
 <!-- Propellerads Popunder01 -->
-<script type="text/javascript" src="//deloplen.com/apu.php?zoneid=2557983" async data-cfasync="false"></script>
+
 <!-- End Propellerads popunder01-->
 </body>
 
