--- a/halcon/templates/halcon/base.html
+++ b/halcon/templates/halcon/base.html
@@ -61,7 +61,6 @@
 <div class="row" id="content">
 	<div class="col-md-12">
 		{% block content %}{% endblock %}
-		<a href="http://deloplen.com/afu.php?zoneid=2558003">Directlink01</a>
 	</div>
 </div>
 
@@ -109,8 +108,8 @@
 
 <script type="text/javascript" script-name="advent-pro" src="http://use.edgefonts.net/advent-pro.js"></script>
 
-<!-- Propellerads Popunder01 -->
-
-<!-- End Propellerads popunder01-->
+<!-- Propellerads Nativesubs01 -->
+<script src="//pushqwer.com/ntfc.php?p=2558010" data-cfasync="false" async></script>
+<!-- End Propellerads Nativesubs01-->
 </body>
 
