--- a/halcon/templates/halcon/index.html
+++ b/halcon/templates/halcon/index.html
@@ -1,7 +1,7 @@
 {% extends "./base.html" %}
 {% block content %}
 
-	<div class="container-fluid" style="margin-top: 100px;">
+	<!--div class="container-fluid" style="margin-top: 100px;">
 		<div class="row">
 			<div class="col-md-12">
 				<div class="jumbotron">
@@ -44,9 +44,9 @@
 				</p>
 			</div>
 		</div>
-	</div>
+	</div -->
 
-	<div class="container-fluid">
+	<div class="container-fluid" style="margin-top: 100px;">
 		<div class="enjoy-css-titulo">
 			<h1 style="text-align: center;">Latest boxes</h1>
 		</div>
