fix show video bug

--- a/halcon/templates/halcon/base.html
+++ b/halcon/templates/halcon/base.html
@@ -80,7 +80,7 @@
 </div>
 
 <script type="text/javascript">
-  (function showplayer(){
+  function showplayer(){
     var str = document.getElementById('vid01').src
     /*alert(str);*/
     var control = document.getElementById('vid01')
@@ -92,7 +92,7 @@
      /*Sí hay video*/
      control.style.display='block';
     }
-  })();
+  }
 </script>
 
 <script type="text/javascript" script-name="advent-pro" src="http://use.edgefonts.net/advent-pro.js"></script>
@@ -108,8 +108,8 @@
 
 <script type="text/javascript" script-name="advent-pro" src="http://use.edgefonts.net/advent-pro.js"></script>
 
-<!-- Propellerads Nativesubs01 -->
+<!-- Propellerads Nativesubs01 >
 <script src="//pushqwer.com/ntfc.php?p=2558010" data-cfasync="false" async></script>
-<!-- End Propellerads Nativesubs01-->
+< End Propellerads Nativesubs01-->
 </body>
 
