--- a/halcon/templates/halcon/cuerpo.html
+++ b/halcon/templates/halcon/cuerpo.html
@@ -12,7 +12,7 @@
       <p>{{ descripcion }}</p>
     </div>
     <p><img id="img01" src="{{ imagen }}"></p>
-    <p><video id="vid01" src="{{ video }}" controls></video></p>
+    <p><video id="vid01" src="{{ video }}" controls style="display: {{ mostrar_video }};"></video></p>
   </center>
 {% endblock %}
 	
